[gd_scene load_steps=19 format=2]

[ext_resource path="res://Puzzle/Interface/Gerenciador/images/hud2.png" type="Texture" id=1]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/down/down_arrow.png" type="Texture" id=2]
[ext_resource path="res://Puzzle/Interface/AddButton/AddButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/down/down_arrow_pressed.png" type="Texture" id=4]
[ext_resource path="res://Puzzle/Interface/Gerenciador/HUD.gd" type="Script" id=5]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/play.png" type="Texture" id=6]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/up/up_arrow_pressed.png" type="Texture" id=7]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/left/left_arrow.png" type="Texture" id=8]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/up/up_arrow.png" type="Texture" id=9]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/walk/walk_pressed.png" type="Texture" id=10]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/turn/turn.png" type="Texture" id=11]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/turn_anti/turn_anti.png" type="Texture" id=12]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/left/left_arrow_pressed.png" type="Texture" id=13]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/walk/walk.png" type="Texture" id=14]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/delete/delete.png" type="Texture" id=15]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/delete/delete_pressed.png" type="Texture" id=16]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/turn/turn_pressed.png" type="Texture" id=17]
[ext_resource path="res://Puzzle/Interface/Gerenciador/images/arrows/turn_anti/turn_anti_pressed.png" type="Texture" id=18]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -97.0
margin_right = 59.0
margin_bottom = -43.0
rect_scale = Vector2( 1.793, 1.793 )
texture = ExtResource( 1 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
margin_left = 4.0
margin_top = 4.0
margin_right = 784.0
margin_bottom = 96.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Add2" parent="TextureRect/HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 94.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Add6" parent="TextureRect/HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 98.0
margin_top = 0.0
margin_right = 192.0
margin_bottom = 92.0
size_flags_horizontal = 3
index = 1

[node name="Add8" parent="TextureRect/HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 196.0
margin_top = 0.0
margin_right = 290.0
margin_bottom = 92.0
size_flags_horizontal = 3
index = 2

[node name="Add7" parent="TextureRect/HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 294.0
margin_top = 0.0
margin_right = 388.0
margin_bottom = 92.0
size_flags_horizontal = 3
index = 3

[node name="Add5" parent="TextureRect/HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 392.0
margin_top = 0.0
margin_right = 486.0
margin_bottom = 92.0
size_flags_horizontal = 3
index = 4

[node name="Add4" parent="TextureRect/HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 490.0
margin_top = 0.0
margin_right = 584.0
margin_bottom = 92.0
size_flags_horizontal = 3
index = 5

[node name="Add3" parent="TextureRect/HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 588.0
margin_top = 0.0
margin_right = 682.0
margin_bottom = 92.0
size_flags_horizontal = 3
index = 6

[node name="Add" parent="TextureRect/HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 686.0
margin_top = 0.0
margin_right = 780.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 64, 27 )
size_flags_horizontal = 3
index = 7

[node name="Arrow" type="TextureButton" parent="TextureRect"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 102.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 3.90407
margin_top = -205.8
margin_right = 95.9041
margin_bottom = 174.2
rect_scale = Vector2( 0.5, 0.5 )

[node name="Delete" type="TextureButton" parent="TextureRect/VBoxContainer"]
show_behind_parent = true
margin_right = 92.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Walk" type="TextureButton" parent="TextureRect/VBoxContainer"]
show_behind_parent = true
margin_top = 96.0
margin_right = 92.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 10 )

[node name="TurnAnti" type="TextureButton" parent="TextureRect/VBoxContainer"]
show_behind_parent = true
margin_top = 192.0
margin_right = 92.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 18 )

[node name="Turn" type="TextureButton" parent="TextureRect/VBoxContainer"]
show_behind_parent = true
margin_top = 288.0
margin_right = 92.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 17 )

[node name="ArrowLeft" type="TextureButton" parent="TextureRect/VBoxContainer"]
visible = false
show_behind_parent = true
margin_right = 92.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 13 )

[node name="ArrowRight" type="TextureButton" parent="TextureRect/VBoxContainer"]
visible = false
show_behind_parent = true
margin_right = 92.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 10 )

[node name="ArrowUp" type="TextureButton" parent="TextureRect/VBoxContainer"]
visible = false
show_behind_parent = true
margin_right = 92.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )

[node name="ArrowDown" type="TextureButton" parent="TextureRect/VBoxContainer"]
visible = false
show_behind_parent = true
margin_right = 92.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 32, -59 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )

[node name="Play" type="TextureButton" parent="."]
margin_left = 713.0
margin_top = 503.0
margin_right = 783.0
margin_bottom = 557.0
rect_scale = Vector2( 1.814, 1.793 )
texture_normal = ExtResource( 6 )

[node name="returnMap" type="TextureButton" parent="."]
anchor_right = 0.02
anchor_bottom = 0.033
margin_left = 843.0
margin_top = 509.0
margin_right = 910.52
margin_bottom = 572.2

[connection signal="pressed" from="TextureRect/Arrow" to="." method="_on_Arrow_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Walk" to="." method="_on_Walk_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/TurnAnti" to="." method="_on_TurnAnti_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Turn" to="." method="_on_Turn_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="returnMap" to="." method="_on_returnMap_pressed"]
